--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
+    ext.lifecycle_version = '1.1.1'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2_version = '2.16'
+    ext.room_version = '1.1.1'
+    ext.junit = '4.12'
+    ext.mockito = '2.11.0'
+    ext.junit_runner = '1.0.2'
+    ext.espresso = '3.0.2'
     repositories {
         google()
         jcenter()
@@ -10,6 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'android.arch.navigation:navigation-safe-args-gradle-plugin:1.0.0-alpha01'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
