--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
     implementation 'androidx.core:core-ktx:1.2.0-alpha02'
+
+    // Layout
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // LiveData & ViewModel
@@ -53,30 +55,28 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     //Rx
-    implementation "io.reactivex.rxjava2:rxjava:2.2.6"
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.0"
+    implementation "io.reactivex.rxjava2:rxjava:$rx_java_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rx_android_version"
 
     // Dagger 2
-    implementation "com.google.dagger:dagger:$dagger2_version"
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
+    implementation "com.google.dagger:dagger:$dagger2_version"
     implementation "com.google.dagger:dagger-android-support:$dagger2_version"
-    compileOnly "org.glassfish:javax.annotation:3.1.1"
+    compileOnly "org.glassfish:javax.annotation:$glassfish_version"
 
     // Room
+    kapt "android.arch.persistence.room:compiler:$room_version"
     implementation "android.arch.persistence.room:runtime:$room_version"
     implementation "android.arch.persistence.room:rxjava2:$room_version"
-    kapt "android.arch.persistence.room:compiler:$room_version"
 
     // Navigation
-    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0'
-    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0'
+    implementation "android.arch.navigation:navigation-fragment-ktx:$arch_navigation_version"
+    implementation "android.arch.navigation:navigation-ui-ktx:$arch_navigation_version"
 
     // Test
-    testImplementation "junit:junit:$junit"
-    testImplementation 'androidx.test:core:1.2.0'
-    testImplementation "org.mockito:mockito-core:$mockito"
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha02'
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "androidx.test:core:$test_core_version"
+    testImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "androidx.test:runner:$junit_runner_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
 }
