--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,16 @@ buildscript {
     ext.lifecycle_version = '1.1.1'
     ext.retrofit_version = '2.4.0'
     ext.dagger2_version = '2.16'
+    ext.glassfish_version = '3.1.1'
+    ext.rx_java_version = '2.2.6'
+    ext.rx_android_version = '2.1.0'
+    ext.arch_navigation_version = '1.0.0'
     ext.room_version = '1.1.1'
-    ext.junit = '4.12'
-    ext.mockito = '2.11.0'
-    ext.junit_runner = '1.0.2'
-    ext.espresso = '3.0.2'
+    ext.junit_version  = '4.12'
+    ext.test_core_version = '1.2.0'
+    ext.mockito_version = '2.11.0'
+    ext.junit_runner_version = '1.3.0-alpha02'
+    ext.espresso_version = '3.3.0-alpha02'
     repositories {
         google()
         jcenter()
